--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,8 @@ fastapi[all]
 geojson-pydantic
 
 # Geopandas requirements 
-fiona # needs gdal `brew install gdal`
-pyproj # needs proj `brew install proj`, `brew install spatialindex`
+fiona 
+pyproj
 rtree
 shapely
 geopandas
-
-# export SPATIALINDEX_C_LIBRARY='/opt/homebrew/Cellar/spatialindex/1.9.3/lib'
